--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,18 @@
             <artifactId>testng</artifactId>
             <version>7.7.1</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-java</artifactId>
+            <version>4.10.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.github.bonigarcia</groupId>
+            <artifactId>webdrivermanager</artifactId>
+            <version>5.4.0</version>
+        </dependency>
     </dependencies>
 
 
