--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
         <maven.compiler.target>11</maven.compiler.target>
         <maven.compiler.source>11</maven.compiler.source>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <aspectj.version>1.9.5</aspectj.version>
+        <aspectj.version>1.8.10</aspectj.version>
         <testng.version>7.7.1</testng.version>
         <selenium-java.version>4.10.0</selenium-java.version>
         <webdrivermanager.version>5.4.1</webdrivermanager.version>
@@ -61,7 +61,7 @@
         <!-- https://mvnrepository.com/artifact/io.qameta.allure/allure-testng -->
         <dependency>
             <groupId>io.qameta.allure</groupId>
-            <artifactId>allure-testng</artifactId>
+            <artifactId>allure-cucumber4-jvm</artifactId>
             <version>2.23.0</version>
         </dependency>
 
@@ -93,6 +93,7 @@
                 <configuration>
                     <argLine>
                         -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
+                        -Dcucumber.options="--plugin io.qameta.allure.cucumber4jvm.AllureCucumber4Jvm"
                     </argLine>
                     <!--suiteXmlFiles>
                         <suiteXmlFile>target/test-classes/general.xml</suiteXmlFile>
