--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,4 +1,4 @@
-url=http://aqa21onl03.testrail.io
+url=https://aqa21onl4.testrail.io
 browser=chrome
 headless=false
 username=atrostyanko@gmail.com
